--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ p {
 .calculator {
   display: block;
   text-shadow: 1px 1px 0 black;
+  text-align: right;
   background-color: #333333;
   background-image: linear-gradient(to bottom, #39365a, #2b1544);
   color: white;
@@ -55,6 +56,18 @@ p {
   border-radius: 10px;
 }
 /*input*/
+
+.enter {
+  border: 1px solid #9e9e9e;
+  color: #000000;
+  padding: 3px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  font-size: 11px;
+  font-family: Verdana;
+  background: #fff;
+  width: 80px;
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
