--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ p {
   display: block;
   text-shadow: 1px 1px 0 black;
   text-align: right;
+
   background-color: #333333;
   background-image: linear-gradient(to bottom, #39365a, #2b1544);
   color: white;
@@ -56,19 +57,30 @@ p {
   border-radius: 10px;
 }
 /*input*/
-
+.haha {
+  text-align: right;
+  width: 130px;
+}
 .enter {
   border: 1px solid #9e9e9e;
   color: #000000;
   padding: 3px;
   margin-top: 2px;
   margin-bottom: 2px;
+  margin-left: 2px;
+  margin-right: 3px;
   font-size: 11px;
   font-family: Verdana;
   background: #fff;
-  width: 80px;
+  width: 60px;
+}
+.resultButton {
+  margin-right: 3px;
 }
 
+#result {
+  margin-right: 3px;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
