--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ p {
   text-align: center;
   margin: auto;
   padding: 4px 1px 4px 4px;
+  width: 60%;
 
 }
 .questionIco {
@@ -112,15 +113,14 @@ p {
 }
 
 .enter {
-
   border: 1px solid #9e9e9e;
   color: #000000;
   padding: 5px;
   font-size: 20px;
   font-family: Verdana;
   background: #fff;
-  height:40px;
-  width: 140px;
+  min-height:40px;
+  width: 100%;
 }
 .entercontainer{
   width: 40%;
@@ -132,7 +132,7 @@ p {
   padding: 1px;
   font-size: 20px;
   height: 30px;
-  min-width: 100%;
+  max-width: 100%;
 }
 .resultButton {
   font-size: 20px;
