--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ p {
   border-color: rgba(255, 255, 255, 0.3);
 }
 
+  
 /*Calculator*/
 
 .calculator {
@@ -47,10 +48,7 @@ p {
   display: block;
   text-shadow: 1px 1px 0 black;
   text-align: right;
-
-  color:white;
-  border-color: rgba(255, 255, 255, 0.3);
-}
+  color:white;}
 .flex{
   margin: 10px;
   padding: 10px;
@@ -186,7 +184,23 @@ input[type="number"] {
 }
 
 @media(max-height: 536px){
+  body{
+    font-size: 16px;
+  }
   .calculator{
-    padding: 100px;
+    padding: 2px;
+  }
+  .enter{
+    font-size: 16px;
+  }
+  .monthSelector{
+    font-size: 16px;
+    height: 24px;
+    width: 100px;
+  }
+  .flex{
+    height: 70px;
+    margin: 2px;
   }
 }
+
