--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
 body {
+  height:100vh;
   margin: 0;
   font-family: "Open Sans", sans-serif;
   font-size: 20px;
   line-height: 1.2;
   color: #000;
+  background-color: teal;
+  background: linear-gradient(to bottom right, rgb(40, 148, 123), rgb(50, 142, 131), rgb(61, 135, 138), rgb(71, 129, 146), rgb(82, 122, 153), rgb(92, 116, 161), rgb(84, 104, 141), rgb(75, 93, 120), rgb(67, 81, 100), rgb(59, 69, 80), rgb(50, 58, 59), rgb(42, 46, 39));  color: white center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 *,
@@ -28,17 +34,12 @@ p {
   width: 100%;
   max-width: 540px;
   margin: 0 auto;
+  
 }
 
 /* Intro */
 
-.intro {
-  width: 100%;
-  height: 100%;
-  background-color: #333333;
-  background-image: linear-gradient(to bottom right, rgb(40, 148, 123), rgb(50, 142, 131), rgb(61, 135, 138), rgb(71, 129, 146), rgb(82, 122, 153), rgb(92, 116, 161), rgb(84, 104, 141), rgb(75, 93, 120), rgb(67, 81, 100), rgb(59, 69, 80), rgb(50, 58, 59), rgb(42, 46, 39));  color: white;
-  border-color: rgba(255, 255, 255, 0.3);
-}
+
 
   
 /*Calculator*/
